Sutter Health/src/objects/Proposal__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity_ID__r.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_RecordType_Name__c</fullName>
        <formula>RFP_Form__r.Account_RecordType_Name__c</formula>
        <label>Tech Account RecordType Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <formula>IF(Opportunity_ID__r.Account.DBA__c != NULL &amp;&amp; Opportunity_ID__r.Account.DBA__c != &apos;&apos;,Opportunity_ID__r.Account.DBA__c,&apos;N/A&apos;)</formula>
        <label>DBA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Employer_Type__c</fullName>
        <formula>IF(TEXT(Opportunity_ID__r.Account.Employer_Type__c) != NULL &amp;&amp; TEXT(Opportunity_ID__r.Account.Employer_Type__c) != &apos;&apos;,TEXT(Opportunity_ID__r.Account.Employer_Type__c),&apos;N/A&apos;)</formula>
        <label>Email Employer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Type__c</fullName>
        <formula>RFP_Form__r.Employer_Type__c</formula>
        <label>Employer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Child_Record_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Child Record Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Quotes_Generated__c</fullName>
        <label># of Quotes Generated</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Quotes_Requested__c</fullName>
        <formula>RFP_Form__r.No_of_Quotes_Requested__c</formula>
        <label># of Quotes Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>Text(RFP_Form__r.Opportunity__r.StageName)</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Year__c</fullName>
        <formula>RFP_Form__r.Plan_Year__c</formula>
        <label>Tech Plan Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Effective_Date__c</fullName>
        <formula>RFP_Form__r.Quote_Effective_Date_n__c</formula>
        <label>Quote Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Date_Due__c</fullName>
        <formula>Opportunity_ID__r.RFP_Due_Date__c</formula>
        <label>RFP Date Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Date_Submitted__c</fullName>
        <formula>Opportunity_ID__r.RFP_Received_Date__c</formula>
        <label>RFP Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Form__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>RFP Form</label>
        <referenceTo>Incumbent_Carrier__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted to Sales</fullName>
                </value>
                <value>
                    <fullName>Approved by Sales</fullName>
                </value>
                <value>
                    <fullName>Rejected by Sales</fullName>
                </value>
                <value>
                    <fullName>Pending Actuarial Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Account_Id__c</fullName>
        <formula>IF(RFP_Form__c &lt;&gt; NULL ,RFP_Form__r.Tech_Account_Id__c, Opportunity_ID__r.AccountId)</formula>
        <label>Tech Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Opportunity_Name__c</fullName>
        <formula>Opportunity_ID__r.Name</formula>
        <label>Tech Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_RFP_Status__c</fullName>
        <formula>Text(RFP_Form__r.Stage__c)</formula>
        <label>Tech RFP Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriting_Comments__c</fullName>
        <label>Underwriting Comments</label>
        <type>TextArea</type>
    </fields>
    <label>Quote</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Opportunity_ID__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>Employer_Type__c</columns>
        <columns>RFP_Form__c</columns>
        <columns>No_of_Quotes_Requested__c</columns>
        <columns>No_of_Quotes_Generated__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Queue</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Opportunity_ID__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>Employer_Type__c</columns>
        <columns>RFP_Form__c</columns>
        <columns>No_of_Quotes_Requested__c</columns>
        <columns>No_of_Quotes_Generated__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Queue</label>
    </listViews>
    <listViews>
        <fullName>SHP_Sales_Queue_Proposal</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Opportunity_ID__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>Employer_Type__c</columns>
        <columns>RFP_Form__c</columns>
        <columns>No_of_Quotes_Requested__c</columns>
        <columns>No_of_Quotes_Generated__c</columns>
        <filterScope>Queue</filterScope>
        <label>SHP Sales Queue</label>
        <queue>SHP_Sales_Queue</queue>
        <sharedTo>
            <group>SHP_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SHP_Underwriter_Queue_Proposal</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Opportunity_ID__c</columns>
        <columns>Opportunity_Stage__c</columns>
        <columns>Employer_Type__c</columns>
        <columns>RFP_Form__c</columns>
        <columns>No_of_Quotes_Requested__c</columns>
        <columns>No_of_Quotes_Generated__c</columns>
        <filterScope>Queue</filterScope>
        <label>SHP Underwriter Queue</label>
        <queue>SHP_Underwriter_Queue</queue>
        <sharedTo>
            <group>Underwriter</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Q-{000000}</displayFormat>
        <label>Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>